# utilc-logging

./: CMakeLists.txt  INSTALL.md
example/: CMakeLists.txt  utilc-logging-example.c
include/: utilc-logging.h  utils.h
src/: CMakeLists.txt  utilc-logging.c  utils.c
tests/: CMakeLists.txt  test-utilc-logging.c
