enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} utilc-logging)
include_directories(. ../include)
add_executable(test-utilc-logging test-utilc-logging.c)
target_link_libraries(test-utilc-logging ${LIBS})
add_test(test-utilc-logging ${CMAKE_CURRENT_BINARY_DIR}/test-utilc-logging)
